--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ section.home{
     justify-content: space-evenly;
     flex-wrap: wrap-reverse;
     margin: 10rem 2rem;
-    border: 2px solid var(--main-color);  
+     
 }
 
 .description{
@@ -361,6 +361,11 @@ footer{
     section.projects{
         margin-top: 30rem;
         margin-bottom: 10rem;
+    }
+
+    .profile_pic{
+        margin-top: 5rem;
+        margin-bottom: -5rem;
     }
 
 
