--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ html{
     /* Helps the in-page links to land on the right position. Without that the title of the section is cropped */
     scroll-padding-top: 100px;
 }
-
+.container{
+    max-width: 100%;
+}
 :root{
     --bg-color: #080808;
     --text-color: white;
@@ -27,6 +29,7 @@ body {
     height: 100%;
     background: var(--bg-color);
     color: var(--text-color);
+    overflow-x: hidden;
 }
 
 span{
@@ -63,7 +66,7 @@ header{
     top: 0;
     left: 0;
     display: flex;
-    padding: 2rem 15%;
+    padding: 2rem 10%;
     background: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);   
     justify-content: space-between;
@@ -133,8 +136,7 @@ section.home{
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap-reverse;
-    margin: 10rem 2rem;
-     
+    margin: 10rem 2rem; 
 }
 
 .description{
@@ -358,14 +360,14 @@ footer{
 /* Responsivity for smaller screen sizes */
 
 @media screen and (max-width: 1029px ){
-    section.projects{
-        margin-top: 30rem;
-        margin-bottom: 10rem;
-    }
-
     .profile_pic{
         margin-top: 5rem;
         margin-bottom: -5rem;
+    }
+
+    section.projects{
+        margin-top: 30rem;
+        margin-bottom: 10rem;
     }
 
 
@@ -438,7 +440,151 @@ footer{
     .contact{
         font-size: 1.5rem;
     }
-}x
+}
+
+@media screen and (max-width: 600px )
+{
+        *{
+            scroll-padding-top: 100px;
+        }
+
+        header{
+            width: 100%;
+        }
+        .profile_pic{
+            margin-top: 5rem;
+            margin-bottom: -5rem;
+        }
+        h1{
+            margin-left: 2rem;
+        }
+
+        h3{
+            margin-top: -2rem;
+            
+        }
+    
+        section.projects{
+            margin-top: 30rem;
+            margin-bottom: 10rem;
+        }
+
+        section.about{
+          width: 100%;
+        }
+
+        .pp2{
+            margin-top: -5rem;
+            margin-bottom: 3rem;
+            max-width: 350px;
+        }
+
+        .section_body{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    
+    
+        #menu-icon{
+            display: block;
+        }
+    
+        .contact{
+            display: none;
+        }
+    
+        .logo{
+            font-size: 3rem;
+        }
+
+        .socials{
+            margin-top: 5rem;
+        }
+    
+        /* Transformation of the navbar into a scroll down menu */
+        .navbar{
+            position: absolute;
+            top: 100%;
+            right: 0;
+            width: 30%;
+            padding: 1rem 3rem;
+            background: rgba(0, 0, 0, 0.8);
+            border-bottom-left-radius: 2rem;
+            border-bottom: 2px solid var(--main-color);
+            border-left: 2px solid var(--main-color);
+            display: none;
+        }
+    
+        .navbar a{
+            display: block;
+            font-size: 2rem;
+            margin:3rem 0;
+        }
+    
+        .navbar.active{
+            display:block;
+        }
+    
+        .socials a{
+            display: inline-flex;    
+        }
+    
+        section.home{
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: center;
+            align-items: center;
+        }
+    
+    
+        .card-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center ;
+            justify-content: center;
+            flex: auto;
+            gap: 5rem;
+        }
+    
+        input,
+        textarea{
+            font-size: 1.5rem;
+        }
+
+        .profile.text p{
+            font-size: 1.5rem;
+            padding-left: 2rem;
+            margin-right: 10rem;
+            padding-bottom: 3rem;
+        }
+
+        li.education{
+            font-size: 1.5rem;
+
+        }
+
+        h3.skill{
+            margin-top: 5rem;
+        }
+
+       h3.about{
+        margin-left: 1rem;
+       }
+
+       .description h1 {
+        font-size: 5rem;
+       }
+
+       .description h3{
+        margin-bottom: 2rem;
+       }
+
+       .navbar{
+        width: 40%;
+       }
+}
 
 /*Skill bar animation */
 
